Fixed breadcrumb overflow bg on hover (#1159)

--- a/packages/office-ui-fabric-react/src/components/Breadcrumb/Breadcrumb.scss
+++ b/packages/office-ui-fabric-react/src/components/Breadcrumb/Breadcrumb.scss
@@ -74,6 +74,10 @@ $Breadcrumb-chevron-sm: 8px;
   cursor: pointer;
   vertical-align: top;
   line-height: 1;
+  &:hover {
+    cursor: pointer;
+    background-color: $ms-color-neutralLighter;
+  }
 }
 
 .item {
